docs(74-spring-sse): step 6 — P1 완결 마감 문서와 작업 G의 게이트 공백 기록
- docs/ADR.md ADR-013 ④에 phase 74 마감 실측 1문장을 **순수 추가**한다
  (git diff -U0 기준 삭제 0행 · 추가 1행 · ADR-001~015 본문과 이전 phase 문장 무수정).
  담은 것: 계약 20파일 · 5 프로파일 · 패리티 313관측 diffs 0 · --dual-run 313관측 diffs 0 ·
  Java 1358 테스트 0 실패 · 구현 라우트 39/39(P1 완결) · 합산 커버리지 게이트 39/39와
  그 비공허성(1행 삭제 → exit 1 · 미커버 4쌍) · ADR-008 예외 4파일 무변과 5/5 red 변이 ·
  와이어 지점 2개와 seam 집합 잠금 · JDK 25 표면 공백(ScopedValue green = 우회로).
- server-spring/README.md: 라우트 표 39/39(미구현 0) · SSE 2행 추가 · 「SSE 두 스트림」 절 신설
  (replay-gate · 프레임 원문 · 인가 2단 · 계약이 못 보는 축과 그것을 잡는 테스트 이름 ·
  계약의 하한 함정) · 계약 절을 20파일/313관측/커버리지 함정과 합산 게이트로 갱신 ·
  ADR-008 절에 SSE 5종 변이 표와 JDK 25 표면 표 추가 · 미검증 공백에 SSE 8항목 추가
  (블로킹 소비자 실측 15,112줄/2ms/6줄 · prelude 큐 총량 무한 등).
- AuthorizationTest: 작업 G-4 — 이 phase가 authorizePeek을 더한 Authorization.java에만
  JDK 25 신규 표면(StructuredTaskScope·ScopedValue·Subtask) 0건 스캔이 빠져 있었다.
  그 스캔 1건을 더한다(게이트 파일 Adr008DisciplineTest는 여전히 0줄이다).

Java clean verify: Tests run 1358 / Failures 0 / Errors 0 / Skipped 0 (연속 2회 동일).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>